change menu name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="nav__bar">
       <div class="nav__menu">
         <img src="https://img.icons8.com/color/48/000000/hamburger.png" />
-        <span>main menu</span>
+        <span>menu</span>
       </div>
     </div>
 
